--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -12,9 +12,9 @@
   box-sizing: border-box;
   line-height: 1.2;
 
-  display: flex;
+  /*display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: center;*/
 
   font-size: clamp(1.2rem, 4vw + 0.5rem, 2.5rem);
   z-index: 1000; /* Ensure it stays on top */
